<resources>
    <string name="app_name">Projet</string>
    <string name="learning_service">Daily learning sessions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="type">Type a word or sentence…</string>
    <string name="hint">e.g To be or not to be</string>
    <string name="selectDictionary">Select a dictionary</string>
    <string name="google">Not satisfied with current options?</string>
    <string name="source_l">Source language…</string>
    <string name="target_l">Target language…</string>
    <string name="word">word</string>
    <string name="hint_l1">e.g French</string>
    <string name="hint_l2">e.g English</string>
    <string name="hint_w">e.g Umbrella</string>
    <string name="dict_URL">URL of the dictionary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_g_french">e.g French</string>
    <string name="e_g_english">e.g English</string>
    <string name="search">SEARCH</string>
</resources>